backend/envoy.yaml
static_resources:
  listeners:
    - name: grpc_web_listener
      address:
        socket_address: {address: 0.0.0.0, port_value: 8090}
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: backend
                      domains: ["*"]
                      retry_policy:
                        retry_on: "reset,unavailable"
                        num_retries: 2
                        per_try_timeout: 5s
                      routes:
                        - match: {prefix: "/nextimage."}
                          route: {cluster: nextimage_grpc, timeout: 0s}
                        - match: {prefix: "/image."}
                          route: {cluster: image_grpc, timeout: 0s}
                        - match: {prefix: "/preference."}
                          route: {cluster: preference_grpc, timeout: 0s}
                        - match: {prefix: "/auth."}
                          route: {cluster: identity_grpc, timeout: 0s}
                        - match: {prefix: "/user."}
                          route: {cluster: identity_grpc, timeout: 0s}
                        - match: {prefix: "/tutorial."}
                          route: {cluster: identity_grpc, timeout: 0s}
                      typed_per_filter_config:
                        envoy.filters.http.cors:
                          "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.CorsPolicy
                          allow_origin_string_match:
                            - prefix: "*"
                          allow_methods: GET, PUT, DELETE, POST, OPTIONS
                          allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,x-grpc-web,x-user-agent,grpc-timeout,authorization
                          expose_headers: grpc-status,grpc-message,grpc-status-details-bin
                          max_age: "1728000"
                http_filters:
                  - name: envoy.filters.http.grpc_web
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_web.v3.GrpcWeb
                  - name: envoy.filters.http.cors
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.cors.v3.Cors
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
  clusters:
    - name: nextimage_grpc
      connect_timeout: 5s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      load_assignment:
        cluster_name: nextimage_grpc
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: {address: next-image-service, port_value: 8084}
    - name: image_grpc
      connect_timeout: 5s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      load_assignment:
        cluster_name: image_grpc
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: {address: image-service, port_value: 8080}
    - name: preference_grpc
      connect_timeout: 5s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      load_assignment:
        cluster_name: preference_grpc
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: {address: user-preferences-service, port_value: 8082}
    - name: identity_grpc
      connect_timeout: 5s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      typed_extension_protocol_options:
        envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
          "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
          explicit_http_config:
            http2_protocol_options: {}
      load_assignment:
        cluster_name: identity_grpc
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: {address: identity-service, port_value: 8081}
